
  tail -f /dev/tty is now supported by not using inotify when any
  non regular files are specified, as inotify is ineffective with these.
  [bug introduced with inotify support added in coreutils-7.5]

  uptime no longer outputs the AM/PM component of the current time,
  as that's inconsistent with the 24 hour time format used.
  [bug introduced in coreutils-7.0]

** New features

  expand and unexpand now support specifying an offset for tab stops
  by prefixing the last specified number like --tabs=1,+8 which is
  useful for visualizing diff output for example.

  split supports a new --hex-suffixes[=from] option to create files with
  lower case hexadecimal suffixes, similar to the --numeric-suffixes option.

** Improvements

  mv --verbose now distinguishes rename and copy operations.

  tail -f now exits immediately if the output is piped
  and the reader of the pipe terminates.

  tail -f no longer erroneously warns about being ineffective
  when following a single tty, as the simple blocking loop used
  is effective in this case.


* Noteworthy changes in release 8.27 (2017-03-08) [stable]

** Bug fixes

  cp --parents will now set an SELinux context for created directories,
  as appropriate for the -a, --preseve=context, or -Z options.
  [bug present since SELinux support added in coreutils-6.10]

  date again converts from a specified time zone.  Previously output was
  not converted to the local time zone, and remained in the specified one.
  [bug introduced in coreutils-8.26]

  Commands like 'cp --no-dereference -l A B' are no longer quiet no-ops
  when A is a regular file and B is a symbolic link that points to A.
  [bug introduced in fileutils-4.0]

  factor no longer goes into an infinite loop for certain numbers like
  158909489063877810457 and 222087527029934481871.
  [bug introduced in coreutils-8.20]

  tail no longer prints redundant file headers with interleaved inotify events,