@@ -155,6 +155,8 @@ gnulib_modules="
   mbrlen
   mbrtowc
   mbsalign
+  mbschr
+  mbslen
   mbswidth
   memcasecmp
   memchr
